fixing html collapse padding

--- a/wp-content/themes/uniteus-sage/resources/styles/app.css
+++ b/wp-content/themes/uniteus-sage/resources/styles/app.css
@@ -421,7 +421,7 @@ body .map-wrap {
 }
 
 .component-section.padding-collapse {
-  @apply py-0;
+  @apply p-0;
 }
 
 .component-section.padding-collapse-all {
